fix sibling active and focus style overlap

--- a/packages/lab/src/tree/TreeNode.css
+++ b/packages/lab/src/tree/TreeNode.css
@@ -42,7 +42,6 @@
     0 calc(var(--salt-size-border) * -1) 0 0 var(--salt-selectable-borderColor-selected),
     0 var(--salt-size-border) 0 0 var(--salt-selectable-borderColor-selected);
   position: relative;
-  z-index: var(--salt-zIndex-default);
 }
 
 .saltTreeNode:focus-visible > .saltTreeNode-content {
